filtro por transacctionid
